--- a/authors.html
+++ b/authors.html
@@ -4,7 +4,7 @@
   <meta name="format-detection" content="telephone=no" />
      <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no" />
         
-  <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
+ <!-- <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
      <link rel="stylesheet" type="text/css" href="css/jquery.mobile.pagination.css" />    
@@ -22,7 +22,7 @@
      <script src="js/custom.js" type="text/javascript"></script>   
 
       <script>
-        </script>
+        </script>-->
   <title>Authors</title>
 </head>
 <body>
@@ -71,7 +71,7 @@
     </div>
     <div id="author-content" data-role="content"  class="blog">
       
-    <div id="author-data" data-iscroll class="wrapper"> </div>
+    <div id="author-data" data-iscroll class="wrapperb"> </div>
       <script id="author-template" type="text/x-handlebars-template">
           {{#each authors}}
            <li><a data-transition="slidedown" href="javascript:window.location.href='authorposts.html?authname={{{slug}}}'">
