--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <div class="panel left" data-role="panel" data-position="left" data-display="push" id="panel-left">
         <ul>
           <li class="home"><a href="index.html"  title="Home" data-rel="close" in-app="true" data-transition="slide" class="ui-btn-active ui-state-persist" data-ajax="false">Home</a></li>
-          <li class="authors"><a href="authors.html" title="Authors" data-rel="close" in-app="true" data-transition="none" data-ajax="false">Authors</a></li>
-          <li class="aboutus"><a href="page.html?page=about-us" title="About Us" data-rel="close" in-app="true" data-transition="fade" data-ajax="false">About Us</a></li>
+          <li class="authors"><a href="" onclick="$(':mobile-pagecontainer').pagecontainer('change', 'authors.html', {   allowSamePageTransition : true,
+    showLoadMsg             : true, transition: 'flow',
+  reload    : true });" title="Authors" data-rel="close" in-app="true" data-transition="none" rel="external">Authors</a></li>
+          <li class="aboutus"><a href="javascript:window.location='page.html?page=about-us'" title="About Us" data-rel="close" in-app="true" data-transition="none" >About Us</a></li>
 <li class="contact"><a href="javascript:window.open(('single.html'), '_self');" title="Contact" data-rel="popup" data-position-to="window" in-app="true" data-transition="none">Contact</a></li>
 <div data-role="popup" id="popupContact" class="ui-content" data-theme="a" >
                 <strong> The Lacuna Blog </strong>
@@ -77,7 +79,8 @@
     <!-- /#header -->
       <div class="panel right" data-role="panel" data-position="right" data-display="overlay" id="panel-right">
           <ul>
-        <li class="how-tos"><a href="category.html?cat=how-tos" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
+        <li class="how-tos"><a href="" onclick="$(':mobile-pagecontainer').pagecontainer('change', 'category.html?cat=how-tos', {  transition: 'flow',
+  reload    : true });" title="How Tos" data-rel="close" in-app="true">How Tos</a></li>
         <li class="freebies"><a href="javascript:window.open(('category.html?cat=freebies'), '_self');" title="Freebies" data-rel="close" in-app="true" data-transition="slide" data-ajax="false">Freebies</a></li>
         <li class="useful-tools"><a href="" onclick="load()" title="Useful Tools" data-rel="close" in-app="true" data-transition="none" class="Next">Useful Tools</a></li>
         <li class="blogging"><a href="" onclick="loadmore()" title="Blogging" data-rel="close" in-app="true">Blogging</a></li>
